fix issue with spacing for post partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,7 +136,7 @@ ul {
 }
 
 .image {
-  width: 200px;
+  width: 100px;
   height: auto;
   background-size: contain;
   background-position: center;
